log/build_2026-04-19_01-21-43/chat_pkg/stderr.log
  File "/home/vboxuser/ros_ws/install/chat_pkg/lib/python3.10/site-packages/chat_pkg/processor_node.py", line 14
    '/raw_signal'
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

